# kerrigan-server

./: CMakeLists.txt  README.md
src/: main.cpp
src/include/: advanced_graph_view.hpp  app_data.hpp  config.hpp  data_mode.hpp  data_processor.hpp  dev_monitor.hpp  gtk_trading_app.hpp  influx_db_client.hpp  stock_monitor.hpp
src/lib/: advanced_graph_view.cpp  config.cpp  data_processor.cpp  dev_monitor.cpp  gtk_trading_app.cpp  influx_db_client.cpp  stock_monitor.cpp
tests/: CMakeLists.txt  deploy_influxdb.sh  dev_data_generator.cpp
